Dont indent on tab when in block selection mode

BUG: 448695